--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -27,7 +27,7 @@
     "moduleResolution": "Node",
     "isolatedModules": true,
     "paths": {
-      "@shared/*": ["../../packages/shared/src/*"]
+      "@trex/shared/*": ["../../packages/shared/src/*"]
     }
   },
   "references": [
