--- a/guardoni/package.json
+++ b/guardoni/package.json
@@ -41,6 +41,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@trex/shared": "workspace:^",
     "axios": "^0.24.0",
     "csv-parse": "^4.16.3",
     "csv-stringify": "^6.0.5",
