--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "clean": "yarn workspaces foreach run clean",
     "lint": "yarn workspaces foreach run lint",
     "type-check": "yarn workspaces foreach run tsc --noEmit",
-    "build": "yarn workspaces foreach run build",
+    "build": "yarn workspaces foreach -vt run build",
     "test": "jest",
     "taboule": "yarn workspace @trex/taboule",
     "shared": "yarn workspace @trex/shared",
@@ -35,6 +35,7 @@
     "tk:ext": "yarn workspace tktrex",
     "ycai": "yarn workspace @trex/ycai",
     "lint-staged": "lint-staged",
+    "project-deps-check": "workspaces-to-typescript-project-references",
     "docker-build": "scripts/docker-build.sh",
     "docker-run": "scripts/docker-run.sh",
     "postinstall": "husky install",
@@ -45,6 +46,7 @@
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
     "@commitlint/prompt-cli": "^16.1.0",
+    "@monorepo-utils/workspaces-to-typescript-project-references": "^2.7.4",
     "@release-it/conventional-changelog": "^4.1.0",
     "@types/node": "^16.11.22",
     "@types/prettier": "^2.4.3",
