--- a/packages/taboule/tsconfig.json
+++ b/packages/taboule/tsconfig.json
@@ -29,7 +29,7 @@
     "moduleResolution": "Node",
     "isolatedModules": true,
     "paths": {
-      "@shared/*": ["../../shared/src/*"]
+      "@trex/shared/*": ["../../shared/src/*"]
     }
   },
   "include": ["./src", "./typings"],
@@ -38,5 +38,9 @@
       "module": "CommonJS"
     }
   },
-  "references": [{ "path": "../shared" }]
+  "references": [
+    {
+      "path": "../shared"
+    }
+  ]
 }
