fix(tktrex): watch for page size increase for data donation

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "backend": "yarn workspace yttrex-backend",
     "extension": "yarn workspace yttrex-extension",
     "guardoni": "yarn workspace guardoni",
-    "tk:ext": "yarn workspace tktrex",
+    "tk:backend": "yarn workspace @tktrex/backend",
+    "tk:ext": "yarn workspace @tktrex/extension",
     "ycai": "yarn workspace @trex/ycai",
     "lint-staged": "lint-staged",
     "docker-build": "scripts/docker-build.sh",
