fix: guardoni electron dmg build and default paths (#387)

--- a/guardoni/electron-builder.yml
+++ b/guardoni/electron-builder.yml
@@ -27,5 +27,9 @@ linux:
   target: ['deb']
   category: Network
 
+mac:
+  target: ['dmg']
+  category: 'public.app-category.utilities'
+
 win:
   target: ['portable']
