refactor: renamed 'gem library' to 'gem collection'

--- a/services/tktrex/shared/tsconfig.json
+++ b/services/tktrex/shared/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../../tsconfig.json",
   "compilerOptions": {
     "allowJs": true,
+    "noEmit": false,
     "baseUrl": "./src",
     "composite": true,
     "esModuleInterop": true,
