--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yttrex-backend",
-  "version": "2.2.1",
+  "version": "2.2.1-1",
   "description": "youtube.tracking.exposed - backend data collector",
   "scripts": {
     "build": "tsc -b",
