--- a/packages/taboule/package.json
+++ b/packages/taboule/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@trex/taboule",
   "description": "Table component to display TrEx data",
-  "version": "2.2.1-1",
+  "version": "2.2.2",
   "scripts": {
     "clean": "rm -rf ./build",
     "type-check": "tsc -b",
