--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@trex/ycai",
-  "version": "2.2.2",
+  "version": "2.2.3-0",
   "description": "YouChoose AI",
   "homepage": "https://youchoose.ai",
   "bugs": "https://github.com/tracking-exposed/yttrex/issues",
