--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.2.2",
+  "version": "2.2.3-0",
   "description": "installs all the YCAI dependencies and YCAI",
   "license": "AGPL-3.0",
   "engines": {
