ci: added 'preReleaseId' option to beta release

--- a/.github/workflows/beta_release.yml
+++ b/.github/workflows/beta_release.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           git config --global user.email "team@tracking.exposed"
           git config --global user.name "Team - Tracking Exposed"
-          yarn release-it --ci --preRelease
+          yarn release-it --ci --preRelease --preReleaseId=beta
 
       - name: Build Dashboard
         env:
