--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -48,6 +48,8 @@ jobs:
         run: |
           yarn extension build
           yarn extension dist:guardoni
+          mkdir -p ~/.guardoni/extension
+          cp ./extension/dist/*.zip ~/.guardoni/extension
 
       - name: Build
         run: yarn guardoni build
