--- a/services/tktrex/backend/package.json
+++ b/services/tktrex/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tktrex-backend",
+  "name": "@tktrex/backend",
   "version": "2.2.3-beta.0",
   "packageManager": "yarn@3.1.1",
   "description": "tiktok.tracking.exposed → backend data collector, to investigate personalization algorithms",
