--- a/services/tktrex/extension/package.json
+++ b/services/tktrex/extension/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tktrex",
+  "name": "@tktrex/extension",
   "version": "2.2.3-beta.0",
   "packageManager": "yarn@3.1.1",
   "scripts": {
