--- a/services/tktrex/automation/package.json
+++ b/services/tktrex/automation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@trex/tt-automation",
-  "version": "0.2.5",
+  "version": "2.2.3-beta.1",
   "packageManager": "yarn@3.1.1",
   "engines": {
     "node": ">=16.0.0"
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@types/jest": "^27.4.0",
+    "@types/pouchdb-find": "^6.3.7",
     "@types/pouchdb-node": "^6.1.4",
     "@types/puppeteer": "^5.4.4",
     "@types/yaml": "^1.9.7",
@@ -53,6 +54,7 @@
     "leveldown": "^6.1.0",
     "linkedom": "^0.13.2",
     "node-fetch": "^2.6.5",
+    "pouchdb-find": "^7.2.2",
     "pouchdb-node": "^7.2.2",
     "puppeteer": "^13.1.1",
     "puppeteer-extra": "^3.2.3",
