--- a/guardoni/package.json
+++ b/guardoni/package.json
@@ -55,7 +55,7 @@
     "lodash": "^4.17.21",
     "nconf": "^0.11.3",
     "node-fetch": "^2.6.7",
-    "puppeteer-core": "^13.1.3",
+    "puppeteer-core": "^13.3.2",
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-stealth": "^2.9.0",
     "puppeteer-in-electron": "^3.0.5",
@@ -68,7 +68,7 @@
     "@types/lodash": "^4.14.178",
     "@types/nconf": "^0.10.1",
     "@types/prettier": "^2.4.3",
-    "@types/react": "17.0.38",
+    "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/webpack-node-externals": "^2.5.3",
     "@types/yargs": "^17.0.8",
