--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -35,7 +35,7 @@
     "@types/debug": "^4.1.7",
     "@types/dotenv-webpack": "^7.0.3",
     "@types/node": "^16.11.22",
-    "@types/react": "17.0.38",
+    "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
