--- a/services/tktrex/automation/package.json
+++ b/services/tktrex/automation/package.json
@@ -16,7 +16,7 @@
   },
   "main": "./dist/index.js",
   "devDependencies": {
-    "@types/node": "^17.0.8",
+    "@types/node": "^16.11.22",
     "@types/unzipper": "^0",
     "@types/webpack": "^5.28.0",
     "@types/yargs": "^17.0.8",
@@ -56,7 +56,7 @@
     "node-fetch": "^2.6.5",
     "pouchdb-find": "^7.2.2",
     "pouchdb-node": "^7.2.2",
-    "puppeteer": "^13.1.1",
+    "puppeteer-core": "^13.3.2",
     "puppeteer-extra": "^3.2.3",
     "puppeteer-extra-plugin-stealth": "^2.9.0",
     "ts-jest": "^27.1.3",
