--- a/guardoni/package.json
+++ b/guardoni/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guardoni",
-  "version": "2.2.3-beta.3",
+  "version": "2.3.0",
   "description": "Guardoni is a tool to automate access and coordinate personalization algorithm analysis",
   "scripts": {
     "clean": "rm -rf build dist",
