--- a/services/tktrex/extension/package.json
+++ b/services/tktrex/extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tktrex/extension",
-  "version": "2.2.3-beta.3",
+  "version": "2.3.0",
   "packageManager": "yarn@3.1.1",
   "scripts": {
     "build": "tsc --build && rm -rf dist && DEBUG=\"*:debug *:error\" NODE_ENV=production webpack",
