fix(workspace): build with no lib check

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,6 +7,7 @@
     "baseUrl": "./",
     "noEmit": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
     "paths": {
       "@shared/*": ["../packages/shared/src/*"]
     }
