--- a/services/tktrex/extension/tsconfig.json
+++ b/services/tktrex/extension/tsconfig.json
@@ -13,6 +13,7 @@
     "resolveJsonModule": true,
     "strict": true,
     "strictNullChecks": true,
+    "skipLibCheck": true,
     "target": "es2015",
     "paths": {
       "@shared/*": ["../../../../packages/shared/src/*"],
