--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -9,12 +9,9 @@ on:
     #   - 'v*.*.*'
 
 jobs:
-  create_release:
+  build:
     name: Create release
     runs-on: ubuntu-latest
-    # Note this. We are going to use that in further jobs.
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -31,15 +28,9 @@ jobs:
       - name: Install dependencies
         run: yarn
 
-      - name: Get version
-        id: version
-        run: |
-          echo "::set-output name=version::$(npm pkg get version | sed 's/"//g')"
-
       - name: YCAI dist
         env:
           NODE_ENV: production
-          VERSION: ${{ steps.version.outputs.name }}
         run: |
           yarn shared build
           yarn taboule build
@@ -49,21 +40,6 @@ jobs:
           yarn guardoni pkg
           yarn tk:ext build
           DOTENV_CONFIG_PATH=.env.beta yarn ycai build:ext
-
-      - name: Upload YCAI extension
-        id: create_release
-        uses: softprops/action-gh-release@v1
-        with:
-          name: v${{ steps.version.outputs.name }}
-          draft: true
-          prerelease: true
-          fail_on_unmatched_files: true
-          files: |
-            ./extension/dist/yttrex-*.zip
-            ./extension/dist/guardoni-yttrex-*.zip
-            ./guardoni/dist/guardoni-cli*
-            ./services/tktrex/extension/build/extension/*.zip
-            ./YCAI/build/extension/*.zip
 
       - uses: actions/cache@v2
         with:
@@ -76,9 +52,9 @@ jobs:
             ./services/tktrex/extension/build
             ./YCAI/build
 
-  release_per_platform:
+  guardoni_release:
     name: Release
-    needs: create_release
+    needs: build
     runs-on: ${{ matrix.config.os }}
     strategy:
       # just an example matrix
@@ -86,9 +62,9 @@ jobs:
         node-version: [16.x]
         config:
           - os: ubuntu-latest
-            command: "dist:linux"
+            command: 'dist:linux'
           - os: macos-latest
-            command: "dist:mac"
+            command: 'dist:mac'
           # - os: windows-latest
           #   command: "dist:windows"
     steps:
@@ -115,6 +91,43 @@ jobs:
             ./packages/taboule/build
             ./extension/build
             ./guardoni/build
+            ./guardoni/dist
+            ./services/tktrex/extension/build
+            ./YCAI/build
+
+      - name: Build Guardoni for ${{ matrix.config.os }}
+        env:
+          DOTENV_CONFIG_PATH: .env.beta
+        run: yarn guardoni ${{ matrix.config.command }}
+
+  gh_release:
+    name: Release on GH
+    runs-on: ubuntu-latest
+    needs: [guardoni_release]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'yarn'
+          cache-dependency-path: yarn.lock
+
+      - name: Install dependencies
+        run: yarn
+
+      - uses: actions/cache@v2
+        with:
+          key: dist
+          path: |
+            ./extension/build
+            ./extension/dist
+            ./guardoni/build
+            ./guardoni/dist
             ./services/tktrex/extension/build
             ./YCAI/build
 
@@ -123,16 +136,18 @@ jobs:
         run: |
           echo "::set-output name=version::$(npm pkg get version | sed 's/"//g')"
 
-      - name: Build Guardoni for ${{ matrix.config.os }}
-        env:
-          DOTENV_CONFIG_PATH: .env.beta
-        run: yarn guardoni ${{ matrix.config.command }}
-
-      - name: Upload release assets
+      - name: Upload YCAI extension
+        id: create_release
         uses: softprops/action-gh-release@v1
         with:
-          name: v${{ steps.version.outputs.version }}
-          draft: false
+          name: v${{ steps.version.outputs.name }}
+          draft: true
+          prerelease: true
           fail_on_unmatched_files: true
           files: |
+            ./extension/dist/yttrex-*.zip
+            ./extension/dist/guardoni-yttrex-*.zip
+            ./guardoni/dist/guardoni-cli*
             ./guardonid/dist/guardoni_*
+            ./services/tktrex/extension/build/extension/*.zip
+            ./YCAI/build/extension/*.zip
