ci: cache restore keys

--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -18,17 +18,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: actions/cache@v2
-        with:
-          key: build
-          path: |
-            ./packages/shared/build
-            ./packages/taboule/build
-            ./extension/build
-            ./guardoni/build
-            ./services/tktrex/extension/build
-            ./YCAI/build
-
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
@@ -51,6 +40,17 @@ jobs:
           yarn guardoni pkg
           yarn tk:ext build
           DOTENV_CONFIG_PATH=.env.beta yarn ycai build:ext
+
+      - uses: actions/cache@v2
+        with:
+          key: build
+          path: |
+            ./packages/shared/build
+            ./packages/taboule/build
+            ./extension/build
+            ./guardoni/build
+            ./services/tktrex/extension/build
+            ./YCAI/build
 
   guardoni_release:
     name: Release
@@ -86,6 +86,7 @@ jobs:
       - uses: actions/cache@v2
         with:
           key: build
+          restore-keys: build
           path: |
             ./packages/shared/build
             ./packages/taboule/build
@@ -122,7 +123,8 @@ jobs:
 
       - uses: actions/cache@v2
         with:
-          key: dist
+          key: build
+          restore-keys: build
           path: |
             ./extension/build
             ./extension/dist
