ci: skip beta release

--- a/.github/workflows/beta_release.yml
+++ b/.github/workflows/beta_release.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           git config --global user.email "team@tracking.exposed"
           git config --global user.name "Team - Tracking Exposed"
-          yarn release-it --ci --preRelease --preReleaseId=beta
+          yarn release-it --ci --preRelease --preReleaseId=beta --dry-run
 
       - name: Build Dashboard
         env:
