ci: disable asar

--- a/guardoni/electron-builder.yml
+++ b/guardoni/electron-builder.yml
@@ -4,7 +4,7 @@ appId: guardoni.tracking.exposed
 
 productName: Guardoni
 
-# asar: true
+asar: false
 # asarUnpack: ['node_modules']
 
 extends: null
