chore(ycai): unified webpack configs

--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -15,13 +15,9 @@
     "lint": "eslint ./src",
     "format": "prettier -w ./src",
     "tsc": "tsc",
-    "build:ext": "tsc --build && NODE_ENV=production webpack -c webpack.extension.config.ts",
-    "build:ext:dev": "tsc --build && webpack -c webpack.extension.config.ts",
     "build": "tsc --build && NODE_ENV=production webpack",
     "build:dev": "tsc --build && webpack",
-    "watch:ext": "webpack -c webpack.extension.config.ts -w",
-    "watch:ext:prod": "DOTENV_CONFIG_PATH=.env yarn watch:ext",
-    "watch": "DEBUG=\"@trex*,@YCAI*\" webpack serve",
+    "watch": "DEBUG=\"@trex*,@YCAI*\" webpack -w",
     "watch:prod": "DOTENV_CONFIG_PATH=.env yarn watch",
     "test": "jest",
     "stats": "webpack-bundle-analyzer build/stats.json",
