chore(guardoni): enable asar

--- a/guardoni/electron-builder.yml
+++ b/guardoni/electron-builder.yml
@@ -4,8 +4,8 @@ appId: guardoni.tracking.exposed
 
 productName: Guardoni
 
-asar: false
-# asarUnpack: ['node_modules']
+asar: true
+asarUnpack: ['node_modules']
 
 extends: null
 publish: false
