--- a/.github/workflows/guardoni_pull_request.yml
+++ b/.github/workflows/guardoni_pull_request.yml
@@ -61,4 +61,6 @@ jobs:
         run: yarn guardoni pkg
 
       - name: Release-it after bump
+        env:
+          YCAI_DOTENV_CONFIG_PATH: .env.beta
         run: yarn release-it-after-bump
