--- a/YCAI/package.json
+++ b/YCAI/package.json
@@ -15,13 +15,9 @@
     "lint": "eslint ./src",
     "format": "prettier -w ./src",
     "tsc": "tsc",
-    "build:ext": "tsc --build && NODE_ENV=production webpack -c webpack.extension.config.ts",
-    "build:ext:dev": "tsc --build && webpack -c webpack.extension.config.ts",
     "build": "tsc --build && NODE_ENV=production webpack",
     "build:dev": "tsc --build && webpack",
-    "watch:ext": "webpack -c webpack.extension.config.ts -w",
-    "watch:ext:prod": "DOTENV_CONFIG_PATH=.env yarn watch:ext",
-    "watch": "DEBUG=\"@trex*,@YCAI*\" webpack serve",
+    "watch": "DEBUG=\"@trex*,@YCAI*\" webpack -w",
     "watch:prod": "DOTENV_CONFIG_PATH=.env yarn watch",
     "test": "jest",
     "stats": "webpack-bundle-analyzer build/stats.json",
@@ -65,7 +61,7 @@
     "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5",
-    "webpack": "^5.68.0",
+    "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
