--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -29,8 +29,13 @@ jobs:
         with:
           key: build-${{ github.run_id }}
           path: |
-            "**/build"
-            "**/dist"
+            packages/shared/build
+            packages/taboule/build
+            extension/dist
+            guardoni/build
+            guardoni/dist
+            YCAI/build
+            services/tktrex/extension/build
 
       - name: Install dependencies
         run: yarn
@@ -78,8 +83,13 @@ jobs:
         with:
           key: build-${{ github.run_id }}
           path: |
-            "**/build"
-            "**/dist"
+            packages/shared/build
+            packages/taboule/build
+            extension/dist
+            guardoni/build
+            guardoni/dist
+            YCAI/build
+            services/tktrex/extension/build
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
@@ -121,8 +131,12 @@ jobs:
           key: build-${{ github.run_id }}
           restore-keys: build-${{ github.run_id }}
           path: |
-            "**/build"
-            "**/dist"
+            packages/shared/build
+            packages/taboule/build
+            guardoni/build
+            guardoni/dist
+            YCAI/build
+            services/tktrex/extension/build
 
       - name: Get version
         id: version
