--- a/services/tktrex/backend/package.json
+++ b/services/tktrex/backend/package.json
@@ -4,6 +4,7 @@
   "packageManager": "yarn@3.1.1",
   "description": "tiktok.tracking.exposed → backend data collector, to investigate personalization algorithms",
   "scripts": {
+    "lint": "eslint ./",
     "watch": "key=fuffa DEBUG=\"*,-express:*,-body-parser:*,-send\" ts-node-dev bin/server",
     "start": "DEBUG=\"*,-body-parser:*,-express:*,-lib:cache,-send\" ts-node bin/server",
     "parserv": "DEBUG=\"*\" ts-node bin/parserv3",
