--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -109,7 +109,7 @@ jobs:
   gh_release:
     name: Release on GH
     runs-on: ubuntu-latest
-    needs: [guardoni_build]
+    needs: [build, guardoni_build]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
