--- a/.github/workflows/gh_release.yml
+++ b/.github/workflows/gh_release.yml
@@ -67,7 +67,7 @@ jobs:
           - os: macos-latest
             command: 'dist:mac'
           - os: windows-latest
-            command: "dist:windows"
+            command: 'dist:windows'
     steps:
       - name: 'Use GNU tar instead BSD tar'
         if: matrix.config.os == 'windows-latest'
@@ -81,7 +81,7 @@ jobs:
 
       - uses: actions/cache@v2
         with:
-          key: build-guardoni-${{ github.run_id }}
+          key: build-guardoni-${{ matrix.config.os }}-${{ github.run_id }}
           restore-keys: |
             build-workspace-${{ github.run_id }}
           path: |
@@ -124,6 +124,10 @@ jobs:
           restore-keys: |
             build-workspace-${{ github.run_id }}
             build-guardoni-${{ github.run_id }}
+            build-guardoni-ubuntu-latest-${{ github.run_id }}
+            build-guardoni-macos-latest-${{ github.run_id }}
+            build-guardoni-windows-latest-${{ github.run_id }}
+
           path: |
             packages/shared/build
             packages/taboule/build
@@ -132,7 +136,6 @@ jobs:
             guardoni/dist
             YCAI/build
             services/tktrex/extension/build
-
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
@@ -143,7 +146,6 @@ jobs:
 
       - name: Install dependencies
         run: yarn
-
 
       - name: Get version
         id: version
