--- a/services/tktrex/automation/package.json
+++ b/services/tktrex/automation/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@trex/tt-automation",
-  "version": "2.2.3-beta.1",
+  "version": "2.4.0",
   "packageManager": "yarn@3.1.1",
   "engines": {
     "node": ">=16.0.0"
