fix(tktrex): improved logging messages and fixed chrome manifest

--- a/services/tktrex/extension/public/manifest.json
+++ b/services/tktrex/extension/public/manifest.json
@@ -33,5 +33,5 @@
     }
   ],
 
-  "web_accessible_resources": ["./interceptor.js", "*.png"]
+  "web_accessible_resources": ["interceptor.js", "*.png"]
 }
